added freetype as reference of sdl2_ttf

--- a/Source/Deps/SDL2_ttf-2.0.15/VisualC/SDL_ttf.vcxproj
+++ b/Source/Deps/SDL2_ttf-2.0.15/VisualC/SDL_ttf.vcxproj
@@ -237,6 +237,9 @@
     <ProjectReference Include="..\..\SDL2-2.0.10\VisualC\SDL\SDL.vcxproj">
       <Project>{81ce8daf-ebb2-4761-8e45-b71abcca8c68}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\external\freetype-2.9.1\builds\windows\vc2010\freetype.vcxproj">
+      <Project>{78b079bd-9fc7-4b9e-b4a6-96da0f00248b}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
