added the suport for x64 platform

--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -119,11 +119,12 @@ copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\exter
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL\SDL2.dll" "$(OutDir)"
-copy /Y "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Image\SDL2_image.dll" "$(OutDir)"
-copy /Y "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\SDL2_mixer.dll" "$(OutDir)"
-copy /Y "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\SDL2_ttf.dll" "$(OutDir)"
-copy /Y "$(SolutionDir)$(Platform)\$(Configuration)" "$(OutDir)"</Command>
+      <Command>copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL\SDL2.dll" "$(OutDir)"
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Image\SDL2_image.dll" "$(OutDir)"
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\SDL2_ttf.dll" "$(OutDir)"
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\SDL2_mixer.dll" "$(OutDir)"
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\external\freetype.dll" "$(OutDir)"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -168,11 +169,12 @@ copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\exter
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL\SDL2.dll" "$(OutDir)"
-copy /Y "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Image\SDL2_image.dll" "$(OutDir)"
-copy /Y "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\SDL2_mixer.dll" "$(OutDir)"
-copy /Y "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\SDL2_ttf.dll" "$(OutDir)"
-copy /Y "$(SolutionDir)$(Platform)\$(Configuration)" "$(OutDir)"</Command>
+      <Command>copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL\SDL2.dll" "$(OutDir)"
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Image\SDL2_image.dll" "$(OutDir)"
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\SDL2_ttf.dll" "$(OutDir)"
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_Mixer\SDL2_mixer.dll" "$(OutDir)"
+copy "$(SolutionDir)bin\libs\$(Configuration)\$(PlatformShortName)\SDL_ttf\external\freetype.dll" "$(OutDir)"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
